# GRACE

./: .gitignore  GRACE.spec  README.md  build.bat  build.sh  install.bat  install.sh  launcher.py  pyproject.toml  setup.py
grace_app/: __init__.py  architect_prompt.txt  config.py  debugger_prompt.txt  engine.py  init_prompt.txt  main.py  models.py  taskmaster_prompt.txt  tree_model.py
grace_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
grace_master/: main.py
