[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grace-manager"
version = "1.0.0"
description = "GRACE Framework Workflow & Context Manager"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "customtkinter"
]

[project.scripts]
grace = "grace_app.main:main"

[tool.setuptools.package-data]
"grace_app" = ["assets/*"]